--- a/locale/messages_cs.properties
+++ b/locale/messages_cs.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=neznámy herec
 cast.role.unknown=neznámá role
 cast.producer.add=Přidat novou Produkci
 cast.producer.remove=Odstranit vybranou Produkci
+producer.name.unknown=neznámy producent
+producer.role.unknown=neznámá role
 
 scraper=Stahovač
 scraper.metadata.select=Vyber metadata k stáhnutí
@@ -450,6 +452,8 @@ movieextendedsearch.newepisodes=Nové epizody
 
 logwindow.title=Chybové logy
 summarywindow.title=Souhrn
+whatsnew.title=Co je nového
+whatsnew.hint=Pro více informací navštivte
 
 message.nfo.writeerror=Zapsání NFO selhalo
 message.nfo.readerror=Parsování NFO selhalo
