--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -46,16 +46,16 @@ tmm.donate=Spenden
 tmm.searchfield=Suchen...
 tmm.errorlogs=Zeige Fehlerbericht
 tmm.wakeonlandevice=Wake on LAN Gerät
-# tmm.wakeonlan=Wake on LAN
-# tmm.version=Version
-# tmm.builddate=Build date
-# tmm.homepage=Homepage
-# tmm.thanksto=Thanks to
-# tmm.of=of
-# tmm.nfo=NFO
-# tmm.images=Images
-# tmm.trailer=Trailer
-# tmm.subtitles=Subtitles
+tmm.wakeonlan=Wake-on-LAN
+tmm.version=Version
+tmm.builddate=Erstellt am
+tmm.homepage=Homepage
+tmm.thanksto=Danke an
+tmm.of=von
+tmm.nfo=Info
+tmm.images=Bilder
+tmm.trailer=Trailer
+tmm.subtitles=Untertitel
 
 status.activethreads=laufende Aufgaben
 status.queuesize=Warteschlange\:
@@ -126,6 +126,8 @@ cast.actor.unknown=unbekannter Schauspieler
 cast.role.unknown=unbekannte Rolle
 cast.producer.add=neuen Produzent hinzufügen
 cast.producer.remove=ausgewählten Produzent entfernen
+producer.name.unknown=Unbekannter Produzent
+producer.role.unknown=Unbekannte Rolle
 
 scraper=Scraper
 scraper.metadata.select=Wähle die zu importierenden Metadaten
@@ -236,10 +238,10 @@ Settings.movieset.store=Speichere Movieset Artwork in einem seperaten Verzeichni
 Settings.movieset.foldername=Verzeichnis Name
 Settings.movieset.buttonselect=Verzeichnis auswählen
 Settings.movieset.folderchooser=Wähle das Movieset Artwork Verzeichnis
-# Settings.image.small=Small
-# Settings.image.medium=Medium
-# Settings.image.big=Big
-# Settings.image.large=Large
+Settings.image.small=Klein
+Settings.image.medium=MIttel
+Settings.image.big=Groß
+Settings.image.large=Sehr groß
 
 # scraper settings
 Settings.getfromTMDB=Plot/Title/Tagline von der TMDB übernehmen?
@@ -248,12 +250,12 @@ Settings.certificationCountry=lokalisierte Altersbeschränkung
 Settings.scraperTreshold=Such-Grenzwert
 Settings.scraperTreshold.hint=Das ist der Wert, wie gut der Suchbegriff mit dem Ergebnis übereinstimmt.\n'Automtisch Scrapen' ignoriert Ergebnisse unter diesem Wert.\nACHTUNG\: ist der Wert zu niedrig, können falsche Ergebnisse genommen werden\!\n\n1 \= 100% gleich\n0.75 \= Standardwert\n0 \= komplett unterschiedlich
 Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
-# Settings.automaticscraper=Automatic scraper
+Settings.automaticscraper=Automatisch scrapen
 
 # movie settings
 Settings.movie.datasource=Film Verzeichnis
 Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle Filme in diesem Pfad aus der Datenbank entfernt. Weitermachen?
-# Settings.movie.visiblecolumns=Visible columns
+Settings.movie.visiblecolumns=Angezeigte Spalten
 
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
@@ -270,8 +272,8 @@ Settings.sorting.info=Präfix auswählen, welcher die Sortierung der Liste beein
 Settings.renamer=Film Dateien umbenennen
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
-# Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
-# Settings.renamer.asciireplacement.hint=Examples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
+Settings.renamer.asciireplacement=Ersetze Nicht-ASCII Zeichen mit dem Basis ASCII Pendant
+Settings.renamer.asciireplacement.hint=Beispiel\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Cleanup Optionen
 Settings.renamer.removenfo=alle anderen NFOs entfernen
 Settings.renamer.moviesetsinglemovie=Erzeuge MovieSet Ordner auch dann an, wenn nur ein Film enthalten ist.
@@ -280,9 +282,9 @@ Settings.imagecacheimport=Bildercache beim Import aufbauen
 Settings.imagecacheimporthint=Achtung\: das Aufbauen des Caches könnte eine Weile dauern
 Settings.devicename=Gerätename
 Settings.macaddress=MAC Adresse
-# Settings.movie.badwords=Bad words
-# Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
-# Settings.runtimefrommediafile=Prefer runtime from MediaInfo
+Settings.movie.badwords=Wortfilter
+Settings.movie.badwords.hint=Wörter, welche von dem Dateinamen / \nerkannten Titel entfernt werden.
+Settings.runtimefrommediafile=Video Laufzeit von MediaInfo vorziehen
 
 Settings.movie.renamer.info=Verfügbare Werte\:\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format\n\n{} \= optionales Ersetzen\nzB\: {Jahr $Y} -> "Jahr 2013" wenn Y$ nicht leer ist.\nWenn Y$ leer ist (oder keine $x Variable dazwischen)\ndann ist der komplette {} Tag leer.
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
@@ -301,7 +303,7 @@ Settings.tvshowtofilename=TvShow Name dem Dateinamen hinzufügen
 Settings.tvshowepisodetofilename=Episodentitle dem Dateinamen hinzufügen
 Settings.tvshowseasonfoldername=Saison Ordnername
 Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit 2 Stellen
-# Settings.separator=Separator
+Settings.separator=Trennzeichen
 
 # tv shows
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
@@ -406,7 +408,7 @@ metatag.trailer=Film Trailer
 
 mediafiletype.unknown=Unbekannt
 mediafiletype.video=Video
-# mediafiletype.video_extra=Video Extras
+mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Untertitel
 mediafiletype.nfo=Info
@@ -420,7 +422,7 @@ mediafiletype.graphic=Grafik
 mediafiletype.movie=Film
 mediafiletype.episode=Episode
 mediafiletype.season_poster=Saison Poster
-# mediafiletype.sample=Sample
+mediafiletype.sample=Sample
 
 chooser.nothingfound=nichts gefunden
 chooser.scrapeing=Scrapen\:
@@ -445,11 +447,13 @@ movieextendedsearch.sortby=sortiert nach
 movieextendedsearch.missingmetadata=fehlende Metadaten
 movieextendedsearch.missingartwork=fehlende Grafiken
 movieextendedsearch.missingsubtitles=fehlende Untertitel
-# movieextendedsearch.newmovies=New movies
-# movieextendedsearch.newepisodes=New episodes
+movieextendedsearch.newmovies=Neue Filme
+movieextendedsearch.newepisodes=Neue Episoden
 
 logwindow.title=Fehlerbericht
 summarywindow.title=Zusammenfassung
+whatsnew.title=Neu in dieser Version
+whatsnew.hint=Für mehr Informationen besuche
 
 message.nfo.writeerror=Fehler beim Schreiben der NFO {} {}
 message.nfo.readerror=Fehler beim Lesen der NFO
