--- a/locale/messages_es.properties
+++ b/locale/messages_es.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=Actor desconocido
 cast.role.unknown=Papel desconocido
 cast.producer.add=Añadir un nuevo Productor
 cast.producer.remove=Borrar Productor seleccionado
+# producer.name.unknown=unknown producer
+# producer.role.unknown=unknown role
 
 scraper=Raspador
 scraper.metadata.select=Seleccione metadatos a raspar
@@ -253,7 +255,7 @@ Settings.automaticscraper=Raspado automático
 # movie settings
 Settings.movie.datasource=Origen de datos
 Settings.movie.datasource.remove.info=Si borras "%s" como ruta de origen de datos todas las películas\nque procedan de ella serán borradas de la base de datos.\n\n¿Seguro que deseas continuar?
-# Settings.movie.visiblecolumns=Visible columns
+Settings.movie.visiblecolumns=Columnas visibles
 
 Settings.datasource.folderchooser=Añadir origen de datos
 Settings.datasource.remove=Borrar origen de datos
@@ -450,6 +452,8 @@ movieextendedsearch.newepisodes=Nuevo episodio
 
 logwindow.title=Reporte de errores
 summarywindow.title=Resumen
+whatsnew.title=Que hay nuevo
+whatsnew.hint=Para más información visita
 
 message.nfo.writeerror=Hubo un error escribiendo NFO{} {}
 message.nfo.readerror=Hubo un error durante el análisis de NFO
