--- a/locale/messages_it.properties
+++ b/locale/messages_it.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=Attore sconosciuto
 cast.role.unknown=Ruolo sconosciuto
 # cast.producer.add=Add a new Producer
 # cast.producer.remove=Remove selected Producer
+# producer.name.unknown=unknown producer
+# producer.role.unknown=unknown role
 
 scraper=Rasciatore
 scraper.metadata.select=Seleziona i metadata da raschiare
@@ -450,6 +452,8 @@ movieextendedsearch.sortby=Ordina per
 
 logwindow.title=Log d'errore
 summarywindow.title=Sommario
+# whatsnew.title=What's new
+# whatsnew.hint=For more information visit
 
 message.nfo.writeerror=Scrittura NFO fallita{} {}
 message.nfo.readerror=Analisi NFO fallita
