--- a/locale/messages_ko.properties
+++ b/locale/messages_ko.properties
@@ -46,16 +46,16 @@ tmm.donate=기부
 tmm.searchfield=찾기...
 tmm.errorlogs=오류 로그 보기
 tmm.wakeonlandevice=Wake on LAN 장치
-# tmm.wakeonlan=Wake on LAN
-# tmm.version=Version
-# tmm.builddate=Build date
-# tmm.homepage=Homepage
-# tmm.thanksto=Thanks to
+tmm.wakeonlan=Wake on LAN
+tmm.version=버전
+tmm.builddate=Build date
+tmm.homepage=홈페이지
+tmm.thanksto=Thanks to
 # tmm.of=of
-# tmm.nfo=NFO
-# tmm.images=Images
-# tmm.trailer=Trailer
-# tmm.subtitles=Subtitles
+tmm.nfo=NFO
+tmm.images=이미지
+tmm.trailer=예고편
+tmm.subtitles=자막
 
 status.activethreads=활성 스레드
 status.queuesize=대기열\:
@@ -126,6 +126,8 @@ cast.actor.unknown=미확인 배우
 cast.role.unknown=미확인 배역
 cast.producer.add=새 프로듀서 추가
 cast.producer.remove=선택 프로듀서 제거
+# producer.name.unknown=unknown producer
+# producer.role.unknown=unknown role
 
 scraper=스크래퍼
 scraper.metadata.select=스크랩할 메타데이터 선택
@@ -236,9 +238,9 @@ Settings.movieset.store=시리즈 영화 아트워크를 별도 폴더에 저장
 Settings.movieset.foldername=폴더 이름
 Settings.movieset.buttonselect=폴더 선택
 Settings.movieset.folderchooser=시리즈 영화 아트워크 폴더 선택
-# Settings.image.small=Small
-# Settings.image.medium=Medium
-# Settings.image.big=Big
+Settings.image.small=작음
+Settings.image.medium=보통
+Settings.image.big=큼
 # Settings.image.large=Large
 
 # scraper settings
@@ -248,7 +250,7 @@ Settings.certificationCountry=등급 기준 국가
 Settings.scraperTreshold=일치점수 최소값
 Settings.scraperTreshold.hint=검색 결과의 정확도를 표시합니다.\n자동 자료수집기는 설정한 값 이하의 결과를 무시합니다.\nBE AWARE\: setting the threshold too low will result in false positives\!\n\n1 \= 100% 동일\n0.75 \= 기본값\n0 \= 완전히 다름
 Settings.default.autoscrape=자동으로 이미지 스크랩 (선택 없음)
-# Settings.automaticscraper=Automatic scraper
+Settings.automaticscraper=자동 자료 수집
 
 # movie settings
 Settings.movie.datasource=데이터 소스
@@ -301,7 +303,7 @@ Settings.tvshowtofilename=파일 이름에 TV 쇼 제목 추가
 Settings.tvshowepisodetofilename=파일 이름에 에피소드 제목 추가
 Settings.tvshowseasonfoldername=시즌 폴더 이름
 Settings.tvshowseasonhint=$1 - 시즌 회차\n$2 - 최소 두 자리의 시즌 회차
-# Settings.separator=Separator
+Settings.separator=분리자
 
 # tv shows
 tvshow.scrape.newitems=새 항목 스크랩
@@ -406,7 +408,7 @@ metatag.trailer=예고편
 
 mediafiletype.unknown=미확인
 mediafiletype.video=비디오
-# mediafiletype.video_extra=Video Extras
+mediafiletype.video_extra=Video Extras
 mediafiletype.audio=오디오
 mediafiletype.subtitle=자막
 mediafiletype.nfo=NFO
@@ -420,7 +422,7 @@ mediafiletype.graphic=그래픽
 mediafiletype.movie=영화
 mediafiletype.episode=에피소드
 mediafiletype.season_poster=시즌 포스터
-# mediafiletype.sample=Sample
+mediafiletype.sample=예제
 
 chooser.nothingfound=결과 없음
 chooser.scrapeing=스크래핑\:
@@ -445,11 +447,13 @@ movieextendedsearch.sortby=정렬\:
 movieextendedsearch.missingmetadata=메타데이터 없음
 movieextendedsearch.missingartwork=아트워크 없음
 movieextendedsearch.missingsubtitles=자막 없음
-# movieextendedsearch.newmovies=New movies
-# movieextendedsearch.newepisodes=New episodes
+movieextendedsearch.newmovies=새 영화
+movieextendedsearch.newepisodes=새 에피소드
 
 logwindow.title=오류 로그
 summarywindow.title=요약
+# whatsnew.title=What's new
+# whatsnew.hint=For more information visit
 
 message.nfo.writeerror=NFO 파일 쓰기 실패{} {}
 message.nfo.readerror=NFO 분석 실패
