--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=Onbekende acteur
 cast.role.unknown=Onbekende rol
 cast.producer.add=Voeg een nieuwe Producer toe
 cast.producer.remove=Verwijder geselecteerde Producer
+producer.name.unknown=Onbekende producent
+producer.role.unknown=Onbekende rol
 
 scraper=Scraper
 scraper.metadata.select=Selecteer te scrapen metadata
@@ -450,6 +452,8 @@ movieextendedsearch.newepisodes=Nieuwe afleveringen
 
 logwindow.title=Fout logs
 summarywindow.title=Overzicht
+whatsnew.title=Nieuw\!
+whatsnew.hint=Bezoek voor meer informatie
 
 message.nfo.writeerror=NFO schrijven mislukt{} {}
 message.nfo.readerror=Verwerken NFO mislukt
