--- a/locale/messages_no.properties
+++ b/locale/messages_no.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=Ukjent skuespiller
 cast.role.unknown=Ukjent rolle
 cast.producer.add=Legg til ny Produsent
 cast.producer.remove=Fjern valgt Produsent
+producer.name.unknown=ukjent produsent
+producer.role.unknown=ukjent rolle
 
 scraper=Datainnsamler
 scraper.metadata.select=Velg metadata som skal hentes
@@ -450,6 +452,8 @@ movieextendedsearch.newepisodes=Nye episoder
 
 logwindow.title=Feil logger
 summarywindow.title=Oppsummering
+whatsnew.title=Nyheter
+whatsnew.hint=For mer informasjon gå til
 
 message.nfo.writeerror=Skriving av NFO feilet{} {}
 message.nfo.readerror=Analyse av NFO feilet
