--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=neznámy herec
 cast.role.unknown=neznáma úloha
 cast.producer.add=Pridať producenta
 cast.producer.remove=Odstrániť označeného producenta
+producer.name.unknown=neznámy producent
+producer.role.unknown=neznáma úloha
 
 scraper=Sťahovač
 scraper.metadata.select=Vyberte metadáta na stiahnutie
@@ -450,6 +452,8 @@ movieextendedsearch.newepisodes=Nové epizódy
 
 logwindow.title=Protokol chýb
 summarywindow.title=Súhrn
+whatsnew.title=Čo je nové
+whatsnew.hint=Pre viac informácií navštívte
 
 message.nfo.writeerror=Zapisovanie NFO zlyhalo{} {}
 message.nfo.readerror=Rozbor NFO zlyhal
