--- a/locale/messages_vi.properties
+++ b/locale/messages_vi.properties
@@ -126,6 +126,8 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # cast.role.unknown=unknown role
 # cast.producer.add=Add a new Producer
 # cast.producer.remove=Remove selected Producer
+# producer.name.unknown=unknown producer
+# producer.role.unknown=unknown role
 
 # scraper=Scraper
 # scraper.metadata.select=Select metadata to be scraped
@@ -450,6 +452,8 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 
 # logwindow.title=Error logs
 # summarywindow.title=Summary
+# whatsnew.title=What's new
+# whatsnew.hint=For more information visit
 
 # message.nfo.writeerror=Writing NFO failed{} {}
 # message.nfo.readerror=Parsing NFO failed
