--- a/locale/messages_cs.properties
+++ b/locale/messages_cs.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Přepiš NFO pro vybrané seriály
 tvshow.rename=Přejmenuj/smaž označené seriály/epizody
 tvshow.clearimagecache=Vyčisti obrázkovou cache pro vybrané Seriály/Epizody
 tvshow.renamer.failedrename=Chyba při přejmenování epizody {} -neplatné číslo sezoný či epizody
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Stáhni data pro epizodu
 tvshowepisode.clone=Klonuj epizodu
