--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
 tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows / Episoden
 tvshow.clearimagecache=Den Bildercache für ausgewählte Serien/Episoden löschen
 tvshow.renamer.failedrename=Konnte Episode {} nicht umbenennen. Ungültige Saison- und/oder Episodennummer.
+tvshow.renamer.tvshowfolder=TV Show Ordner umbenennen
+tvshow.renamer.tvshowfolder.year=Das Jahr zum Ordnername hinzufügen
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
