--- a/locale/messages_it.properties
+++ b/locale/messages_it.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Riscrivi NFO per le Serie Tv selezionate
 tvshow.rename=RInomina/pulisci Serie Tv/episodi selezionati
 tvshow.clearimagecache=Pulisci l'immagine cache per la Serie Tv / episodio selezionata
 tvshow.renamer.failedrename=Ridenominazione episodio fallita  {} - stagione e/o numero dell'episodio non valido
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Raschia metadata episodio
 tvshowepisode.clone=Clona episodio
