--- a/locale/messages_ko.properties
+++ b/locale/messages_ko.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=선택한 TV 쇼 NFO 다시 쓰기
 tvshow.rename=선택한 TV 쇼/에피소드 이름 변경/정리
 tvshow.clearimagecache=선택한 TV 쇼/에피소드 이미지 캐시 정리
 tvshow.renamer.failedrename=에피소드 {} 이름 변경 실패 - 잘못된 시즌/회차
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=에피소드 메타데이터 스크랩
 tvshowepisode.clone=에피소드 복제
