--- a/locale/messages_pt.properties
+++ b/locale/messages_pt.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Reescrever NFO p/ Programa(s) de Tv selecionado(s)
 tvshow.rename=Renomear/limpar programa(s) de TV selecionado(s)
 tvshow.clearimagecache=Limpar cache de imagem para o(s) Programa(s) de TV/Episódio(s) selecionado(s)
 tvshow.renamer.failedrename=Falha ao renomear episódio {} - número de temporada e/ou episódio inválido
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Pesquisar dados do episódio
 tvshowepisode.clone=Duplicar episódio
