--- a/locale/messages_es.properties
+++ b/locale/messages_es.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Reescribir NFO para programa TV seleccionado
 tvshow.rename=Limpiar y renombrar programa TV/ episodio seleccionado
 tvshow.clearimagecache=Limpiar cache de imágenes para programa TV/ episodio seleccionado
 tvshow.renamer.failedrename=Hubo un error no se pudo renombrar el episodio {} - número de temporada o episodio no validos
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Raspar metadatos episodio
 tvshowepisode.clone=Clonar episodio
