--- a/locale/messages_fr.properties
+++ b/locale/messages_fr.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Réécriture des NFO pour les séries sélectionées
 tvshow.rename=Renommer/nettoyer la(les) série(s) sélectionnée(s)
 tvshow.clearimagecache=Effacer le cache image pour la (les) série(s)/épisode(s) sélectionné(s)
 # tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Scraper les métadonnées de l'épisode
 tvshowepisode.clone=Cloner l'épisode
