--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Herschrijf NFO voor geselecteerde TV serie(s)
 tvshow.rename=Geselecteerde TV serie(s)/aflevering(en) hernoemen/opschonen
 tvshow.clearimagecache=Wis afbeelding cache voor geselecteerde TV serie(s)/aflevering(en)
 tvshow.renamer.failedrename=Mislukt om aflevering {} te hernoemen - ongeldig seizoen en/of aflevering nummer
+tvshow.renamer.tvshowfolder=Hernoem TV serie map
+tvshow.renamer.tvshowfolder.year=Jaar toevoegen aan TV serie map
 
 tvshowepisode.scrape=Metadata aflevering scrapen
 tvshowepisode.clone=Dupliceer aflevering
