--- a/locale/messages_no.properties
+++ b/locale/messages_no.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Omskriv NFO for valgt(e) TV serie(r)
 tvshow.rename=Omdøping/opprydding av valgt(e) TV serie(r)/episode(r)
 tvshow.clearimagecache=Tøm midlertidig bildelager for valgte TV serie(r)/episode(r)
 tvshow.renamer.failedrename=Omdøping av episode {} feilet - ugyldig sesong og/eller episode nummer
+# tvshow.renamer.tvshowfolder=Rename TV show folder
+# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Hent metadata for episode
 tvshowepisode.clone=Kopier episode
