--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Prepísať NFO označených seriálov
 tvshow.rename=Premenovať/vyčistiť označené seriály/epizódy
 tvshow.clearimagecache=Vyčistiť medzipamäť obrázkov pre označené seriály/epizódy
 tvshow.renamer.failedrename=Nepodarilo sa premenovať epizódu {} - nesprávne číslo epizódy alebo sezóny
+tvshow.renamer.tvshowfolder=Premenovať priečinok seriálov
+tvshow.renamer.tvshowfolder.year=Pridať rok do priečinka seriálov
 
 tvshowepisode.scrape=Stiahni metadáta epizódy
 tvshowepisode.clone=klonovať epizódu
