--- a/changelog.txt
+++ b/changelog.txt
@@ -1,23 +1,25 @@
-feature: completely reworked the TV show panel (including a new panel for seasons - http://www.tinymediamanager.org/index.php/reworked-tv-show-section/ )
-feature: completely reworked the (movie) filter panel and added a filter panel for TV shows (see http://www.tinymediamanager.org/index.php/filter_panels/ )
-feature: added movie filters: datasource, missing metadata, missing artwork, missing subtitles, new movies
-feature: added TV show filters: datasource, cast member, missing metadata, missing artwork, missing subtitles, new episodes
-feature: added possibility to hide several columns in the movie table 
-feature: experimental support for AniDB scraper
-feature: added fanart.tv for TV shows
-feature: added imdb top 250
-feature: added producers
-feature: added an ASCII cleaner for the renamer
-feature: added "bad words" to the movie importer
-feature: possibility to get the runtime from media files rather than scraper
-feature/fix: reworked tagging of TV shows and episodes
-fix: many enhancements to the "update datasources" and database engine -> tmm is much faster now with large databases
-fix: some fixes and preventions to the "update datasources" engine
-fix: many memory optimizations (tmm now uses less memory) 
-fix: several issues/problems with the renamer
-fix: artwork naming for DVD/BR images
-fix: adapted scaling factor of the tmm window - now it should fit on lower screens nicely
-fix: crash at startup with invalid locales
-fix: crash when searching for a movie set is fixed with themoviedbapi 3.9  
-fix: NFO parsing of xbmc-youtube plugin urls
-fix: externalized some more string (better translations)
+Version 2.5
+=======================
++ completely reworked the TV show panel (including a new panel for seasons - http://www.tinymediamanager.org/index.php/reworked-tv-show-section/ )
++ completely reworked the (movie) filter panel and added a filter panel for TV shows (see http://www.tinymediamanager.org/index.php/filter_panels/ )
++ added movie filters: datasource, missing metadata, missing artwork, missing subtitles, new movies
++ added TV show filters: datasource, cast member, missing metadata, missing artwork, missing subtitles, new episodes
++ added possibility to hide several columns in the movie table 
++ experimental support for AniDB scraper
++ added fanart.tv for TV shows
++ added imdb top 250
++ added producers
++ added an ASCII cleaner for the renamer
++ added "bad words" to the movie importer
++ possibility to get the runtime from media files rather than scraper
++/x reworked tagging of TV shows and episodes
+x many enhancements to the "update datasources" and database engine -> tmm is much faster now with large databases
+x some fixes and preventions to the "update datasources" engine
+x many memory optimizations (tmm now uses less memory) 
+x several issues/problems with the renamer
+x artwork naming for DVD/BR images
+x adapted scaling factor of the tmm window - now it should fit on lower screens nicely
+x crash at startup with invalid locales
+x crash when searching for a movie set is fixed with themoviedbapi 3.9  
+x NFO parsing of xbmc-youtube plugin urls
+x externalized some more string (better translations)
