--- a/src/messages.properties
+++ b/src/messages.properties
@@ -56,6 +56,8 @@ tmm.nfo=NFO
 tmm.images=Images
 tmm.trailer=Trailer
 tmm.subtitles=Subtitles
+tmm.update.title=check for update
+tmm.update.message=A new update has been found.\nDo you want to update?
 
 status.activethreads=active threads
 status.queuesize=Queue:
