temp. deactivated certification country (none of the scraper supports certifications from other countries)

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -306,6 +306,7 @@ Settings.tvshowepisodetofilename=add episode title to filename
 Settings.tvshowseasonfoldername=season folder name
 Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 Settings.separator=Separator
+Settings.tvshow.certifactioncountry.hint=Disabled: at the moment none of the scraper supports certifications from differend countries
 
 # tv shows
 tvshow.scrape.newitems=Scrape new items
