--- a/src/messages.properties
+++ b/src/messages.properties
@@ -306,7 +306,7 @@ Settings.tvshowepisodetofilename=add episode title to filename
 Settings.tvshowseasonfoldername=season folder name
 Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 Settings.separator=Separator
-Settings.tvshow.certifactioncountry.hint=Disabled: at the moment none of the scraper supports certifications from differend countries
+Settings.tvshow.certifactioncountry.hint=Hint: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications 
 
 # tv shows
 tvshow.scrape.newitems=Scrape new items
