state it more clearly that we only operate on the TMM database ;)

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -34,7 +34,7 @@ tmm.clearurlcache=clear url cache
 tmm.clearimagecache=clear image cache
 tmm.rebuildimagecache=rebuild image cache
 tmm.cleardatabase=initialize database
-tmm.cleardatabase.hint=Be careful: this will remove the complete database to start with a new one. Proceed?
+tmm.cleardatabase.hint=Be careful: this will remove the complete TMM database to start with a new one. Proceed?
 tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
 tmm.gotoinstalldir=Open tMM install directory in a file browser 
@@ -256,7 +256,7 @@ Settings.automaticscraper=Automatic scraper
 
 # movie settings
 Settings.movie.datasource=Datasources
-Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the database. Continue?
+Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the TMM database. Continue?
 Settings.movie.visiblecolumns=Visible columns
 
 Settings.datasource.folderchooser=Add datasource
@@ -299,7 +299,7 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=TV show datasources
 Settings.tvshowdatasource.folderchooser=add TV show datasource
-Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the TMM database. Continue?
 Settings.tvshowseasontofilename=add season to filename
 Settings.tvshowtofilename=add TV show name to filename
 Settings.tvshowepisodetofilename=add episode title to filename
