added option for scraper fallback

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -253,6 +253,7 @@ Settings.scraperTreshold=Score threshold
 Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE: setting the threshold too low will result in false positives!\r\n\r\n1 = 100% the same\r\n0.75 = default\r\n0 = they are completely different
 Settings.default.autoscrape=automatically scrape images (without selection)
 Settings.automaticscraper=Automatic scraper
+Settings.scraperfallback=Fall back to other scrapers when getting no search result  
 
 # movie settings
 Settings.movie.datasource=Datasources
