MovieTrailersPanel: display extension instead of url; migrate old qualities-with-extension

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -358,6 +358,7 @@ metatag.episodes=Episodes
 metatag.external=external
 metatag.filename=Filename
 metatag.files=Files
+metatag.format=Format
 metatag.genre=Genres
 metatag.guests=Guests
 metatag.images=Images
