created ui module for tv shows refactored settings panel (it is now a menu->dialog)

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -199,12 +199,11 @@ Feedback.send.ok=Feedback sent
 
 # settings menu (linebreaks with html)
 Settings.movies=Movies
-Settings.scraper=<html><center>Movies -<br>Scraper</center></html>
-Settings.images=<html><center>Movies -<br>Images</center></html>
-Settings.tvshow=Tv Shows
-Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
+Settings.scraper=Scraper
+Settings.images=Images
+Settings.tvshow=TV Shows
 Settings.general=General
-Settings.externaldevices=<html>External<br>devices</html>
+Settings.externaldevices=External devices
 
 # general settings
 Settings.proxy=Proxy Settings
