added registerdonator dialog added menu entries for find missing movies

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -11,6 +11,7 @@ Button.search=Search
 Button.save=Save
 Button.scrape=Scrape
 Button.edit=Edit
+Button.register=Register
 
 menuitem.cut=Cut
 menuitem.copy=Copy
@@ -34,7 +35,7 @@ tmm.clearurlcache=clear url cache
 tmm.clearimagecache=clear image cache
 tmm.rebuildimagecache=rebuild image cache
 tmm.cleardatabase=initialize database
-tmm.cleardatabase.hint=Be careful: this will remove the complete TMM database to start with a new one. Proceed?
+tmm.cleardatabase.hint=Be careful: this will remove the complete tMM database to start with a new one. Proceed?
 tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
 tmm.gotoinstalldir=Open tMM install directory in a file browser 
@@ -58,6 +59,12 @@ tmm.trailer=Trailer
 tmm.subtitles=Subtitles
 tmm.update.title=check for update
 tmm.update.message=A new update has been found.\nDo you want to update?
+tmm.registerdonator=Register to donator version
+tmm.registerdonator.error=There was a problem registering your version
+tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
+tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating!
+tmm.donatorfunction.hint=This feature is restricted to our donators.
 
 status.activethreads=active threads
 status.queuesize=Queue:
@@ -91,6 +98,8 @@ movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
 movie.rewritenfo=Rewrite NFO for selected movie(s)
 movie.clearimagecache=Clear image cache for selected movie(s)
+movie.findmissing.all=Find missing movies in all datasources
+movie.findmissing=Find missing movies
 
 movie.export=Export selected movie(s)
 
